--- a/client-app/package.json
+++ b/client-app/package.json
@@ -38,7 +38,7 @@
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
-        "postbuild": "rimraf ../API/wwwroof && move build ../API/wwwroot",
+        "postbuild": "rimraf ../API/wwwroot && move build ../API/wwwroot",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
